Added proportion_of_labels to main

--- a/visualizar_grafos_labels.ipynb
+++ b/visualizar_grafos_labels.ipynb
@@ -153,6 +153,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SBM Graph: 2000 nodes, 389084 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evolving initial attribute distribution: 100%|██████████| 10000/10000 [00:00<00:00, 12440.47it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In community 0 the proportion of [1, -1, 0] 's is [0.378, 0.41, 0.212]\n",
+      "In community 1 the proportion of [-1, 1, 0] 's is [0.362, 0.352, 0.286]\n",
+      "In community 2 the proportion of [-1, 1, 0] 's is [0.278, 0.508, 0.214]\n",
+      "In community 3 the proportion of [-1, 1, 0] 's is [0.384, 0.474, 0.142]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from inference_models import *\n",
+    "from generate_opinions import *\n",
+    "from generate_graphs import *\n",
+    "from utils import *\n",
+    "\n",
+    "num_nodes = 500\n",
+    "num_comm = 4\n",
+    "comms = [num_nodes] * num_comm  #communities\n",
+    "intra_degree_seq = [15] * sum(comms)\n",
+    "inter_degree_seq = [1] * sum(comms)\n",
+    "G = generate_sbm(comms, 0.75, 0.01)\n",
+    "#v = random.choice(G) # choose one single node\n",
+    "v = random.sample(list(G.nodes()), 100)  # choose a random set of nodes\n",
+    "r_values = [1]  # radius of the known ball\n",
+    "\n",
+    "# ----------------------------------------------------\n",
+    "# Opinion generation\n",
+    "# ----------------------------------------------------\n",
+    "opinion_dist = OpinionDistribution(G)  # create instance of class OpinionDistribution with graph G\n",
+    "opinion_dist.initialize_opinions(states=[-1, 0, 1], probabilities=[0.4, 0.2, 0.4], label='opinion')\n",
+    "opinion_dist.basic_opinion_generator(label='opinion', num_steps=10000)\n",
+    "proportion_of_labels(nodes_per_comm=num_nodes, num_communities=num_comm, Graph=G, label='opinion')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
